// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tokens /> should render error 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Tokens
    </h2>
    <p
      class="text-center text-danger"
    >
      An error occurred while fetching data.
    </p>
  </div>
</div>
`;

exports[`<Tokens /> should render spinner 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Tokens
    </h2>
    <div
      class="spinner-wrapper my-3 text-center"
    >
      <div
        class="spinner-border"
        role="status"
      >
        <span
          class="sr-only"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tokens /> should render tokens 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Tokens
    </h2>
    <div
      class="table-responsive"
    >
      <table
        class="table table-hover mb-0"
      >
        <thead
          class="thead-light"
        >
          <tr>
            <th
              scope="col"
            >
              Name
            </th>
            <th
              aria-label="Actions"
              scope="col"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="align-middle"
            >
              foo
            </td>
            <td
              class="text-end"
            >
              <div
                class="btn-group"
                role="group"
              >
                <a
                  class="btn btn-primary btn-sm"
                  download=""
                  href="/reforis/remote-access/api/tokens/1"
                >
                  Download
                </a>
                <button
                  class="btn btn-danger btn-sm d-inline-flex justify-content-center align-items-center"
                  type="button"
                >
                  <span>
                    Revoke
                  </span>
                </button>
              </div>
            </td>
          </tr>
          <tr>
            <td
              class="align-middle"
            >
              bar
            </td>
            <td
              class="text-end"
            >
              <span
                class="text-muted"
              >
                Access revoked
              </span>
            </td>
          </tr>
          <tr>
            <td
              class="align-middle"
            >
              baz
            </td>
            <td
              class="text-end"
            >
              <div
                class="spinner-border spinner-border-sm"
                role="status"
              >
                <span
                  class="sr-only"
                />
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
